# Messager

./: pyproject.toml
messager/api/: admin.py  models.py  serializers.py  urls.py  views.py
messager/api/migrations/: 0001_initial.py  0002_rename_text_message_message.py  0003_chat_message_chat.py  0004_alter_message_chat.py  0005_remove_chat_recipient_remove_chat_user_chat_users.py  0006_alter_message_options_alter_chat_users.py  0007_alter_message_message.py  0008_chat_new_message.py  0009_chat_new_message_count.py  0010_rename_update_at_chat_created_at_and_more.py  0011_alter_chat_users.py  0012_alter_chatslog_user.py
messager/auth_app/: admin.py  apps.py  auth_yandex.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
messager/auth_app/migrations/: 0001_initial.py  0002_avatar.py  0003_alter_profile_age.py  0004_alter_profile_age.py  0005_alter_profile_age_alter_profile_bio_and_more.py  0006_alter_profile_name.py  0007_alter_profile_name.py
messager/auth_app/static/auth_app/css/: sign-in.css
messager/auth_app/templates/auth_app/: sign-in-callback.html  sign-in.html
messager/frontend/: urls.py
messager/frontend/static/frontend/css/: chats.css  profile.css  style.css  users.css
messager/frontend/static/frontend/scripts/: app.js  chats.js  profile_mixin.js  show-section.js  users_mixin.js
messager/frontend/templates/frontend/: base.html
messager/index/: auth_yandex.py  urls.py  views.py
messager/index/templates/index/: base.html  sign-in.html
messager/messager/: asgi.py  settings.py  urls.py  wsgi.py
